--- a/src/app/user-layout/user-layout.component.html
+++ b/src/app/user-layout/user-layout.component.html
@@ -1,1 +1,13 @@
-<p>user-layout works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">RATAN LAL</a>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+            <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="nav-item">
+                <a class="nav-link" [routerLink]="[menuItem.path]">
+                    <p>{{menuItem.title}}</p>
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<router-outlet></router-outlet>
