added about and education

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,45 @@
-<p>about works!</p>
+<section id="about">
+    <div class="about">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="col-left">
+                    <div class="about-img">
+                        <img src="/assets/Ratan-Lal.jpg" alt="img">
+                        <h1 id="move">Dr. <span style="color: crimson;">R</span>atan <span
+                                style="color: crimson;">L</span>al</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="col-right">
+                    <h1 class="section-title" style="text-transform: uppercase;">about me</h1>
+                    <p style="line-height: 1.5rem;font-size: 0.9rem;">Ratan Lal is a Ph.D. candidate in the department of computer science at Kansas State University,
+                        USA.
+                        He obtained his master in computer science from Indian Statistical Institute, India in 2014. He
+                        was
+                        a research assistant at IMDEA Software Institute, Spain from July 2014 to December 2015. He was
+                        a
+                        research intern at Toyota Motor North America, Research and Development (TMNA R&D) in summer
+                        2019.
+                        His main research interest is in the Formal Analysis of (Stochastic) Cyber-Physical Systems and
+                        its
+                        applications in automotive, robotics, unmanned aerial vehicle (UAV), and autonomous underwater
+                        vehicle (AUV), with emphasis on both theoretical and practical methods for the design and
+                        verification of hybrid control systems. He has been awarded the Gattani Outstanding Graduate
+                        Student
+                        Award for his research outstanding at Kansas State University. He has been serving as a member
+                        of
+                        research evaluation program committee for the top conferences: International Conference on
+                        Hybrid
+                        Systems: Computation and Control (HSCC), International Conference on Computer-Aided Verification
+                        (CAV). Also, he has been serving as a technical program committee for the international
+                        conferences:
+                        Advances in Computation, Communications and Services (ACCSE). He has reviewed more than 50
+                        papers
+                        for the international conferences and journals related to cyber-physical systems.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
