--- a/src/app/publications/publications.component.html
+++ b/src/app/publications/publications.component.html
@@ -1,1 +1,18 @@
-<p>publications works!</p>
+<h2 style="text-align: center;padding: 1.5%;">Publications</h2>
+<div style="padding-left: 7%;">
+    <div><b style="font-size: 1.0em;">Year: </b>
+        <select style="padding-left: 1%;" [(ngModel)]="chosenMod" (ngModelChange)="modo()">
+            <option value="{{x}}" *ngFor="let x of years" >{{x}}</option>
+        </select>
+    </div>
+</div>
+<br>
+<ol style="padding-left: 7%;">
+    <div *ngFor="let data of Pub_data">
+        <li style="padding: 1%;">
+            <h4>{{data.Author}}</h4>
+            <a href="{{data.PubUrl}}">{{data.PubName}}</a>
+            <div>{{data.Domain}}, {{data.Year}}</div>
+        </li>
+    </div>
+</ol>
