--- a/src/app/research/research.component.html
+++ b/src/app/research/research.component.html
@@ -1,1 +1,67 @@
-<p>research works!</p>
+<section id="about">
+    <div class="row">
+        <h1 style="text-align: center; padding: 5px;">Recearch</h1><hr>
+    </div>
+    <div class="row">
+        <div class="container">
+            <div class="row" style="margin-bottom: 20px">
+                <div class="col-md-4">
+                    <div class="card" >
+                        <img src="assets/research.jpg" class="card-img-top" alt="..." style="height: 27rem;">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Safety Verification</h5>
+                            <a href="#" class="btn btn-primary b-gray">View</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" >
+                        <img src="assets/research.jpg" class="card-img-top" alt="..." style="height: 27rem;">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Requirement Validation</h5>
+                            <a href="#" class="btn btn-primary b-gray">View</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" >
+                        <img src="assets/research.jpg" class="card-img-top" alt="..." style="height: 27rem;">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Optimal Path/Motion Planning for Autonomous Systems</h5>
+                            <a href="#" class="btn btn-primary b-gray">View</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 20px">
+                <div class="col-md-4">
+                    <div class="card" >
+                        <img src="assets/research.jpg" class="card-img-top" alt="..." style="height:27rem;">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Safety Verification</h5>
+                            <a href="#" class="btn btn-primary b-gray">View</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" >
+                        <img src="assets/research.jpg" class="card-img-top" alt="..." style="height: 27rem;">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Requirement Validation</h5>
+                            <a href="#" class="btn btn-primary b-gray">View</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card" >
+                        <img src="assets/research.jpg" class="card-img-top" alt="..." style="height: 27rem;">
+                        <div class="card-img-overlay">
+                            <h5 class="card-title">Optimal Path/Motion Planning for Autonomous Systems</h5>
+                            <a href="#" class="btn btn-primary b-gray">View</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
