added new component

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,33 @@
-<p>contact works!</p>
+<h1 style="text-align: center;padding: 1.5%;">CONTACT INFO</h1>
+<div class="container">
+        <div class="contact-items">
+            <div class="contact-item">
+                <div class="icon"><img src="https://img.icons8.com/bubbles/200/000000/phone.png" /></div>
+
+                <div class="contact-info">
+                    <h1>phone</h1>
+                    <h2>+1 4699289722</h2>
+                    <h2>+91 9346257272</h2>
+                </div>
+            </div>
+            <div class="contact-item">
+                <div class="icon"><img src="https://img.icons8.com/bubbles/200/000000/email.png" /></div>
+
+                <div class="contact-info">
+                    <h1>email</h1>
+                    <h2>atmakuri.pavan9909@gmail.com</h2>
+                    <h2>pavan.atm9909@gmail.com</h2>
+                </div>
+            </div>
+            <div class="contact-item">
+                <div class="icon"><img src="https://img.icons8.com/bubbles/200/000000/address.png" /></div>
+
+                <div class="contact-info">
+                    <h1>address</h1>
+                    <h2>603E 7th st apt #08</h2>
+                    <h2>Maryville</h2>
+                    <h2>USA</h2>
+                </div>
+            </div>
+        </div>
+    </div>
