--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,87 +1,42 @@
-#contact{
-    padding: 50px 10px;
-}
-#contact .contact{
-    flex-direction: column;
-    max-width: 1200px;
-    margin: 0 auto;
-    
-}
-#contact .contact-items{
-    width: 400px;
-}
-#contact .contact-item{
-    width: 80%;
-    padding: 20px;
+.contact-title{
+    color: black;
     text-align: center;
-    border-radius: 10px;
-    padding: 30px;
-    margin: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    box-shadow: 0px 0px 18px 0 #0000002c;
-    transition: .3s ease box-shadow;
-}
-#contact .contact-item:hover{
-    box-shadow: 0px 0px 5px 0 #0000002c;
-}
-#contact .icon{
-    width: 70px;
-    margin: 0 auto;
-    margin-bottom: 10px;
-}
-#contact .contact-info h1{
-    text-transform: uppercase;
-    font-size: 2.5rem;
-    font-weight: 500;
-    margin-bottom: 5px;
-}
-#contact .contact-info h2{
-    font-size: 1.3rem;
-    font-weight: 500;
-    line-height: 2rem;
-    margin-bottom: 5px;
+    font-size: 25px;
+    margin-bottom: 20px;
 }
 
-@media only screen and (min-width:760px){
-
-    #contact .contact{
-        flex-direction: column;
-        padding: 10px 30px;
-        align-items: center;
-        justify-content: center;
-        min-width: 20vh;
-    }
-    #contact .contact-items{
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        padding: 20px;
-        margin: 0;
-    }
-    #contact .contact-item{
-        margin: 20px;
-        flex-direction: row;
-    }
-    #contact .contact-item .icon{
-        height: 100px;
-        width: 100px;
-    }
-    #contact .contact-item .icon img{
-        object-fit: contain;
-    }
-    #contact .contact-item .contact-info
-    {
-        width: 100%;
-        text-align: left;
-        padding-left: 20px;
-    }
+.contact-sub-title{
+    text-align: center;
+    font-size: 15px;
+    padding-bottom: 2%;
 }
 
-/* @media only screen and (min-width: 1200px){
-    #contact{
-        padding: 5px 10px;
-    }
-}  */
+.contact .contact-info-item{
+    flex: 0 0 25%;
+    max-width: 25%;
+    text-align: center;
+}
+
+.contact .contact-info-item .icon{
+    display: inline-block;
+}
+
+.contact .contact-info-item .icon .fa{
+    font-size: 25px;
+    color: black;
+}
+
+.contact .contact-info-item h4{
+    font-size: 18px;
+    font-weight: 700;
+    color: black;
+    text-transform: capitalize;
+    margin: 15px 0 5px;
+}
+
+.contact .contact-info-item p{
+    font-size: 16px;
+    line-height: 25px;
+    color: black;
+    font-weight: 400;
+}
