added software tab layout

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,23 +1,27 @@
-<div class="container">
-    <h1 style="text-align: center;padding: 1.5%;">CONTACT INFO</h1>
-    <h3 class="contact-title ">Have You Any Questions ?</h3>
-    <h4 class="contact-sub-title">I'M AT YOUR SERVICES</h4>
-    <div class="contact row">
-        <div class="contact-info-item col-md-5">
-            <div class="icon"><i class="fa fa-phone "></i></div>
-            <h4>Call us on</h4>
-            <p>+93573 46462365</p>
-        </div>
-        <div class="contact-info-item col-md-5">
-            <div class="icon"><i class="fa fa-map-marker"></i></div>
-            <h4>Office</h4>
-            <p>Maryville</p>
-        </div>
-        <div class="contact-info-item col-md-5">
-            <div class="icon"><i class="fa fa-envelope"></i></div>
-            <h4>Email</h4>
-            <p>Rlal@nwmissouri.edu</p>
+<div class="row">
+    <div class="container">
+        <h1 style="text-align: center;padding: 1.5%;">CONTACT INFO</h1>
+        <h3 class="contact-title ">Have You Any Questions ?</h3>
+        <h4 class="contact-sub-title">I'M AT YOUR SERVICES</h4>
+        <div class="container">
+        <div class="contact row">
+            <div class="contact-info-item col-md-4">
+                <div class="icon"><i class="fa fa-phone "></i></div>
+                <h4>Call us on</h4>
+                <p>+93573 46462365</p>
+            </div>
+            <div class="contact-info-item col-md-4">
+                <div class="icon"><i class="fa fa-map-marker"></i></div>
+                <h4>Office</h4>
+                <p>Maryville</p>
+            </div>
+            <div class="contact-info-item col-md-4">
+                <div class="icon"><i class="fa fa-envelope"></i></div>
+                <h4>Email</h4>
+                <p>Rlal@nwmissouri.edu</p>
+            </div>
         </div>
     </div>
 
+    </div>
 </div>
