--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -3,7 +3,7 @@
     <div *ngFor="let data of Education_data">
     <li style="padding: 1%;">
         <h4>{{data.Degree}}</h4>
-        <a href="{{data.UniUrl}}" style="color: red;">{{data.UniName}}</a>
+        <a href="{{data.UniUrl}}" target="_blank" style="color: red;">{{data.UniName}}</a>
         <div>{{data.Place}}</div>
     </li>
     </div>
