--- a/src/app/publications/publications.component.html
+++ b/src/app/publications/publications.component.html
@@ -11,7 +11,7 @@
     <div *ngFor="let data of Pub_data">
         <li style="padding: 1%;">
             <h4>{{data.Author}}</h4>
-            <a href="{{data.PubUrl}}">{{data.PubName}}</a>
+            <a href="{{data.PubUrl}}" target="_blank">{{data.PubName}}</a>
             <div>{{data.Domain}}, {{data.Year}}</div>
         </li>
     </div>
