--- a/src/app/user-layout/user-layout.component.html
+++ b/src/app/user-layout/user-layout.component.html
@@ -15,4 +15,4 @@
         <app-side-news style="float:right; padding: 60px 20px;" class="col-md-3"></app-side-news>
     </div>
 </div>
-<router-outlet style="float:left;" class="col-md-9"></router-outlet>
+<router-outlet style="float:left;" class="col-md-9 container"></router-outlet>
