--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<section id="about">
+<section id="about" class="container">
     <div class="about">
         <div class="row">
             <div class="col-md-4">
