--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -5,6 +5,10 @@
     margin-bottom: 20px;
 }
 
+.contact{
+    padding-top: 40px;
+}
+
 .contact-sub-title{
     text-align: center;
     font-size: 15px;
@@ -12,8 +16,6 @@
 }
 
 .contact .contact-info-item{
-    flex: 0 0 25%;
-    max-width: 25%;
     text-align: center;
 }
 
