--- a/src/app/softwares/softwares.component.html
+++ b/src/app/softwares/softwares.component.html
@@ -1,1 +1,44 @@
-<p>softwares works!</p>
+<div class="row">
+    <div class="container">
+        <section id="softwares">
+            <div class="row">
+                <h1 style="text-align: center; padding: 5px;">Softwares</h1>
+                <hr>
+            </div>
+            <div *ngIf="isValid;then content else other_content">here is ignored</div>
+            <ng-template #content>
+                <div class="row">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6 " *ngFor="let data of software_data">
+                                <div style="display: flex; justify-content: center;">
+                                    <div class="button" (click)="ChangeToDetails(data.name, data.info)"
+                                        style="display: flex; justify-content: center; text-align: center;">
+                                        <div style="padding: 10px;">{{data.name}}</div>
+                                    </div>
+                                </div>
+                                <p style="text-align: center; padding-top: 10px;">{{data.description}}</p>
+                                <a href="{{data.source}}"
+                                    style="text-align: center; display: flex; justify-content: center; padding-bottom: 30px;">socurce
+                                    code</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </ng-template>
+            <ng-template #other_content>
+                <div class="row">
+                    <div class="container">
+                        <a (click)="ChangeToDetails('back', 'back')" class="btn btn-primary b-gray" style="margin-bottom: 10px;">Back to Research</a>
+                        <div class="card" style="padding: 10px;">
+                            <h3 style="text-align: center">{{software_name}}</h3>
+                            <p>{{software_info}}</p>
+                        </div>
+                    </div>
+                </div>
+            </ng-template>
+        </section>
+
+
+    </div>
+</div>
