--- a/src/app/softwares/softwares.component.html
+++ b/src/app/softwares/softwares.component.html
@@ -29,7 +29,7 @@
             <ng-template #other_content>
                 <div class="row">
                     <div class="container">
-                        <a (click)="ChangeToDetails('back', 'back')" class="btn btn-primary b-gray" style="margin-bottom: 10px;">Back to Research</a>
+                        <a (click)="ChangeToDetails('back', 'back')" class="btn btn-primary b-gray" style="margin-bottom: 10px;">Back to softwares</a>
                         <div class="card" style="padding: 10px;">
                             <h3 style="text-align: center">{{software_name}}</h3>
                             <p>{{software_info}}</p>
