--- a/src/app/user-layout/user-layout.component.html
+++ b/src/app/user-layout/user-layout.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">RATAN LAL</a>
+    <a class="navbar-brand">RATAN LAL</a>
     <div class="collapse navbar-collapse">
         <ul class="navbar-nav">
             <li routerLinkActive="active" *ngFor="let menuItem of menuItems" class="nav-item">
